@@ -1,5 +1,6 @@
 iowow (1.4.16) UNRELEASED; urgency=medium
 
+  * ~8% IO performance improvements due to use of MADV_RANDOM
   * Fixed Github Vulnerability Report GHSL-2022-066
   * Added additional IW_ERROR_XX codes (iwlog.h)
   * Added VERBOSE log level (iwlog.h)
